# kurultai

./: .gitignore  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  deploy.yml  self-hosted.yml
docs/: upstream-inspiration.md
docs/ideation/: kurultai-future-directions-2026-07-18.html
docs/plans/: 2026-07-19-001-feat-phase-1-foundation-plan.md  2026-07-20-001-feat-phase-1-remaining-foundation-plan.md  2026-07-21-001-feat-search-retrieval-rrf-plan.md  2026-07-21-002-feat-phase2-testing-gates-plan.md  2026-07-22-001-feat-phase3-ask-synthesis-plan.md  2026-07-22-002-feat-phase3-http-daemon-plan.md  2026-07-23-001-chore-phase2-closeout-plan.md  2026-07-23-001-feat-phase-3-synthesis-interface-plan.md  2026-07-23-002-chore-phase1-lfg-closeout-plan.md  2026-07-24-001-feat-phase-4-pond-dayflow-connectors-plan.md  phase-1-closeout.md  phase-1-complete.md  phase-1-work-orders.md  phase-2-closeout-work-orders.md  phase-2-closeout.md  phase-2-complete.md  phase-2-graph-orchestration.md  phase-2-testing-work-orders.md  phase-3-work-orders.md
docs/solutions/architecture-patterns/: fts-first-null-embedder-no-zero-vectors.md
scripts/: phase-1-closeout.sh  phase-2-closeout.sh
src/: environment.rs  error.rs  hashutil.rs  lib.rs  logging.rs  main.rs  types.rs
src/app/: context.rs  mod.rs
src/brain/: mod.rs
src/config/: file.rs  loader.rs  mod.rs
src/connectors/: appflowy.rs  dayflow.rs  filesystem.rs  markdown.rs  mod.rs  obsidian.rs  pond.rs  registry.rs
src/embed/: mod.rs
src/http/: mod.rs
src/mcp/: brain.rs  init.rs  interface.rs  mod.rs  server.rs  stdio.rs
src/pipeline/: mod.rs
src/query/: context.rs  hybrid.rs  mod.rs  rrf.rs  synthesize.rs
src/rerank/: mod.rs
src/security/: mod.rs  paths.rs  redact.rs  secrets.rs
src/store/: migrations.rs  mod.rs  schema.sql
src/synthesize/: mod.rs
tests/: cli_init_test.rs  cli_smoke.rs  connector_fs_test.rs  embed_guard_test.rs  golden_path_test.rs  http_daemon.rs  mcp_smoke_test.rs  phase3_ask_test.rs  phase4_connectors_test.rs  retrieval_hybrid.rs  store_schema_test.rs
tests/fixtures/: README.md
tests/fixtures/vault/: ideas.md  ops.md  welcome.md
tests/fixtures/vault/daily/: standup.md
tests/fixtures/vault/ops/: deploy.md
