[package]
name = "kurultai"
version = "0.1.0"
edition = "2021"
description = "Kurultai — a unified knowledge retrieval layer. Assemble what you know, from wherever it lives."
authors = ["Luke Kimball <duketopceo@gmail.com>"]
license = "MIT"
repository = "https://github.com/duketopceo/kurultai"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.8", features = ["derive"] }
toml = "0.8"
directories = "5"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
