[package]
name = "kurultai"
version = "0.1.0"
edition = "2021"
description = "Kurultai — a unified knowledge retrieval layer. Assemble what you know, from wherever it lives."
authors = ["Luke Kimball <duketopceo@gmail.com>"]
license = "MIT"
repository = "https://github.com/duketopceo/kurultai"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for API calls, embedding endpoints)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SQLite with vector support (pin 0.1.6 — newer alphas fail to compile)
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "=0.1.6"
zerocopy = "0.7"

# Content hashing for incremental index skip
sha2 = "0.10"

# Embeddings - via OpenRouter/API initially
# Local embedding support via llama-cpp-rs will be added later

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Config & paths
toml = "0.8"
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File watching for auto-indexing
notify = "6"

# Glob for file discovery
glob = "0.3"
axum = { version = "0.8", features = ["json", "tokio"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
